--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-generic-forms",
   "version": "1.0.0",
   "main": "dist/lib/index.js",
+  "types": "dist/lib/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build-lib": "tsc",
