--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "declaration": true,
+        "strict": true,
         "outDir": "dist/lib/"
     },
     "files": [
