cleanup; call submit only if form is valid;  auto call setsubmitting;

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build-lib": "tsc",
-    "build-example": "wp"
+    "build-lib-and-example": "wp"
   },
   "devDependencies": {
     "@types/react": "^16.4.16",
