--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "react-generic-forms",
   "version": "1.0.0",
-  "main": "dist/lib/index.js",
-  "types": "dist/lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build-lib": "tsc",
-    "build-lib-and-example": "wp"
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/react": "^16.4.16",
@@ -14,11 +13,10 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "ts-loader": "^5.2.1",
-    "typescript": "^3.5.3",
-    "webpack": "^4.20.2",
-    "webpack-nano": "^0.6.2"
+    "typescript": "^3.5.3"
   },
   "peerDependencies": {
-    "react": "^16.6.3"
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
