--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-generic-forms",
-  "version": "1.0.0",
+  "author": "dkirchhof",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
+  "repository": "github:dkirchhof/react-generic-forms",
   "scripts": {
     "build": "tsc"
   },
